Expose `smatrix` command as a `setuptools` console script

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,10 @@ install_requires =
 [options.package_data]
 smatrix = py.typed, _version.txt, *.pyi
 
+[options.entry_points]
+console_scripts =
+    smatrix = smatrix.cli:main
+
 [bdist_wheel]
 universal = true
 
